fixes footer h stretch+ content w

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a:hover {
     flex: 0 1 auto;
     position: relative;
     bottom: 0;
-    max-width: 296px;
+    width: 296px;
     padding: 20px;
     overflow-y: auto;
     -ms-overflow-style: none;  /* IE and Edge */
@@ -113,7 +113,9 @@ a:hover {
     flex-direction: row;
     justify-content: space-between;
     gap: 20px;
-    height: 4vh;
+    /*height: 4vh;*/
+    align-items: stretch;
+    
 }
 
 .footer-item {
@@ -124,7 +126,13 @@ a:hover {
     border-style: solid;
     padding: 5px;
     width:100%;
-    height: 4vh;
+    height: 100%;
+    min-height: 4dvh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-around;
+    align-items: center;
 }
 
 /*
